# docucore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  PLUGINS.md  ROADMAP.md
docucore/: __init__.py  cli.py
docucore/core/: __init__.py  config.py  constants.py  filesystem.py  manifest.py  output_plan.py  scanner.py  snapshot.py  status.py  writer.py
docucore/exporters/: __init__.py  docx.py  markdown.py  pdf.py
docucore/generators/: __init__.py  architecture.py  backend.py  common.py  frontend.py  infrastructure.py  inventory.py  modules.py  readme.py  snapshot.py
docucore/models/: __init__.py  config.py  inventory.py  manifest.py  scan.py
docucore/plugins/: __init__.py  base.py  docker.py  dotnet.py  generic.py  node.py  python.py
examples/basic-project/: README.md
tests/: test_cli.py  test_config.py  test_markdown_style.py  test_outputs.py  test_scanner.py  test_snapshot.py
