[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docucore"
version = "0.1.0"
description = "Motor generico de documentacion viva para proyectos de software."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "DocuCore Contributors" }
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
docucore = "docucore.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["docucore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
